--- a/src/components/playoff-tree/playoff-tree.css
+++ b/src/components/playoff-tree/playoff-tree.css
@@ -169,14 +169,15 @@
 }
 
 .team > * {
-  padding: 0 3px;
+  margin: 0 3px;
 }
 
 .goals {
-  padding-inline-start: 5px;
+  margin-inline-start: 5px;
 }
 
 .logo {
+  flex-shrink: 0;
   width: 1.2em;
   max-height: 1.5em;
 }
