--- a/src/components/bar/bar.css
+++ b/src/components/bar/bar.css
@@ -2,7 +2,8 @@
 :host {
   display: block;
   height: 14px;
-  font-size: 11px;
+  font-size: 12px;
+  line-height: 1;
   pointer-events: none;
   position: relative;
 }
@@ -11,6 +12,8 @@
   position: absolute;
   overflow: hidden;
   height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .level {
