reactions: almost there

--- a/src/components/reaction/reaction.css
+++ b/src/components/reaction/reaction.css
@@ -2,6 +2,7 @@
   --emoji-font-size: 14px;
   --active-background: #7fa67833;
   --active-border: #7fa678;
+  --reaction-font-size: inherit;
   --reaction-padding: 4px 8px;
 }
 
