reactions: mostly add loading + show thumbs up as default

--- a/src/components/reaction/reaction.css
+++ b/src/components/reaction/reaction.css
@@ -20,6 +20,9 @@ label {
   cursor: pointer;
   user-select: none;
 }
+input:disabled + label {
+  cursor: default;
+}
 
 input:checked + label {
   border: 1px solid var(--active-border);
