--- a/src/components/reactions/reactions.css
+++ b/src/components/reactions/reactions.css
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
 
-  background-color: #eee;
+  background-color: transparent;
   border: 1px solid #ccc;
   border-radius: 100px;
   box-sizing: border-box;
@@ -20,6 +20,15 @@
 
   cursor: pointer;
   user-select: none;
+}
+
+.add-button svg {
+  width: var(--reaction-font-size);
+  height: var(--reaction-font-size);
+}
+.add-button svg:last-child {
+  /* when the svg is not followed by any text, align better because icon has empty space at bottom */
+  margin-top: 1px;
 }
 
 .reaction-dropdown:not([hidden]) {
