--- a/src/components/reaction/reaction.css
+++ b/src/components/reaction/reaction.css
@@ -1,9 +1,7 @@
 :host {
-  --emoji-font-size: 14px;
   --active-background: #7fa67833;
   --active-border: #7fa678;
   --reaction-font-size: inherit;
-  --reaction-padding: 4px 8px;
 }
 
 label {
@@ -15,7 +13,8 @@ label {
   border: 1px solid #ccc;
   border-radius: 100px;
   box-sizing: border-box;
-  padding: var(--reaction-padding);
+  padding-block: var(--reaction-padding-block, 4px);
+  padding-inline: var(--reaction-padding-inline, 8px);
 
   cursor: pointer;
   user-select: none;
