--- a/src/components/rating/rating.css
+++ b/src/components/rating/rating.css
@@ -1,7 +1,7 @@
 :host {
   position: relative;
   display: inline-flex;
-  background: var(--rating-background, #FFFFFF);
+  background: var(--rating-background, #ffffff);
   color: var(--rating-color, #666666);
   border-radius: 100% 100% 100% 100%;
   font-weight: var(--rating-font-weight, bold);
@@ -10,7 +10,7 @@
   justify-content: center;
 
   --progress-arc-stroke-width: 4px;
-  --progress-arc-rest-color: var(--rating-stamina-arc-rest, #CCCCCC);
+  --progress-arc-rest-color: var(--rating-stamina-arc-rest, #cccccc);
 }
 
 :host([size="small"]) {
@@ -23,10 +23,27 @@ hattrick-progress-arc {
   left: 0;
 }
 
-.stamina-verylow { --progress-arc-color: var(--rating-stamina-arc-very-low, #DD4140); }
-.stamina-low { --progress-arc-color: var(--rating-stamina-arc-low, #F5A104); }
-.stamina-high { --progress-arc-color: var(--rating-stamina-arc-high, #F1C40A); }
-.stamina-veryhigh { --progress-arc-color: var(--rating-stamina-arc-very-high, #31A94B); }
+.stamina-verylow {
+  --progress-arc-color: var(--rating-stamina-arc-very-low, #dd4140);
+}
+.stamina-low {
+  --progress-arc-color: var(--rating-stamina-arc-low, #f5a104);
+}
+.stamina-high {
+  --progress-arc-color: var(--rating-stamina-arc-high, #f1c40a);
+}
+.stamina-veryhigh {
+  --progress-arc-color: var(--rating-stamina-arc-very-high, #31a94b);
+}
 
-.rating-full { font-size: 1em; line-height: 1; }
-.rating-half { font-size: 0.6em; line-height: 1; }
+.rating {
+  z-index: 1;
+}
+.rating-full {
+  font-size: var(--rating-font-size, 1em);
+  line-height: 1;
+}
+.rating-half {
+  font-size: var(--rating-font-size-half, 0.6em);
+  line-height: 1;
+}
