--- a/src/components/rating/rating.css
+++ b/src/components/rating/rating.css
@@ -34,6 +34,10 @@
   --rating-star-size: 13px;
 }
 
+:host([no-star]) {
+  border-top-right-radius: 100%;
+}
+
 hattrick-progress-arc {
   position: absolute;
   top: 0;
