rating: fix progress size and position

--- a/src/components/field/field.css
+++ b/src/components/field/field.css
@@ -162,6 +162,10 @@
 hattrick-rating {
   margin: 5px;
 
+  --rating-stamina-stroke-width: 6px;
+  --rating-stamina-offset: 4px;
+  --rating-star-size: 20px;
+
   --rating-font-size: 24px;
   --rating-font-size-half: 18px;
 
