--- a/src/components/range/range.css
+++ b/src/components/range/range.css
@@ -1,4 +1,3 @@
-
 :host {
   /**
    * @prop --bar-background: Background of the range bar
@@ -63,8 +62,6 @@
   text-align: center;
   box-sizing: border-box;
 }
-
-
 
 :host {
   --knob-border-radius: 50%;
@@ -151,7 +148,7 @@
 
   border-radius: 50%;
 
-  transform: translate3d(0, 0, 0) scale(.01);
+  transform: translate3d(0, 0, 0) scale(0.01);
 
   display: inline-block;
   position: relative;
@@ -159,7 +156,9 @@
   min-width: 28px;
   height: 28px;
 
-  transition: transform 120ms ease, background 120ms ease;
+  transition:
+    transform 120ms ease,
+    background 120ms ease;
 
   background: var(--pin-background);
   color: var(--pin-color);
@@ -210,7 +209,7 @@
 }
 
 :host(.range-disabled) .range-knob {
-  transform: scale(.55);
+  transform: scale(0.55);
 
   outline: 5px solid #fff;
 
@@ -220,7 +219,7 @@
 .range-knob-handle {
   top: calc((var(--height) - var(--knob-size) * 2) / 2);
   left: 0;
-  
+
   margin-left: calc(0px - var(--knob-size) * 2 / 2);
 
   position: absolute;
