--- a/src/components/player/player.css
+++ b/src/components/player/player.css
@@ -11,6 +11,11 @@
   padding: 5px 10px;
   pointer-events: none;
   z-index: var(--player-z-index, 10);
+
+  user-select: none;
+  font-weight: normal;
+  text-decoration: none;
+  font-style: normal;
 }
 
 .retired {
